Make sure toolbar is not squished into oblivion in google chrome

--- a/src/modules/app/components/app/app.component.scss
+++ b/src/modules/app/components/app/app.component.scss
@@ -19,3 +19,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.main-toolbar {
+  min-height: 48px;
+}
